changed build gradle

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,6 @@ tasks.withType(Test) {
 
     testLogging {
         lifecycle {
-//            events "started", "failed"
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
@@ -62,6 +61,6 @@ tasks.withType(Test) {
 
 task edit_test(type: Test) {
     useJUnitPlatform {
-        includeTags("api")
+        includeTags("editing")
     }
 }
