--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,7 @@ fabric.properties
 .mtj.tmp/
 
 # Package Files #
+*.jar
 *.war
 *.nar
 *.ear
@@ -143,6 +144,12 @@ replay_pid*
 
 # Ignore Gradle GUI config
 gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+gradle-wrapper.properties
 
 # Cache of project
 .gradletasknamecache
