--- a/.gitignore
+++ b/.gitignore
@@ -143,10 +143,10 @@ replay_pid*
 !src/**/build/
 
 # Ignore Gradle GUI config
-gradle-app.setting
+.gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-gradle-wrapper.jar
+.gradle-wrapper.jar
 
 # Avoid ignore Gradle wrappper properties
 gradle-wrapper.properties
