--- a/.gitignore
+++ b/.gitignore
@@ -142,11 +142,14 @@ replay_pid*
 **/build/
 !src/**/build/
 
-/wrapper
 # Ignore Gradle GUI config
 !gradle-app.setting
 
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
+# Avoid ignore Gradle wrappper properties
+gradle-wrapper.properties
 
 # Cache of project
 .gradletasknamecache
